# dummygameserver

./: ,  .gitmodules  CMakeLists.txt
include/: abstract_game_server.hpp  errors.hpp  game_server.hpp  game_session.hpp  master_client.hpp  network_server.hpp  network_session.hpp  player.hpp  response_packet.hpp  server_map.hpp  state.hpp  test_game_server.hpp  test_server.hpp
include/game_session_state/: game_session_state.hpp  initial_state.hpp  loading_state.hpp  manage_characters_state.hpp  playing_state.hpp  send_characters_state.hpp
include/master_client_state/: initial_state.hpp  master_client_state.hpp
include/network_session_state/: initial_state.hpp  loading_state.hpp  manage_characters_state.hpp  playing_state.hpp  send_characters_state.hpp  state.hpp
src/: abstract_game_server.cpp  game_server.cpp  game_session.cpp  main.cpp  master_client.cpp  network_server.cpp  network_session.cpp  player.cpp  response_packet.cpp  server_map.cpp  test_game_server.cpp  test_server.cpp
src/game_session_state/: game_session_state.cpp  initial_state.cpp  loading_state.cpp  manage_characters_state.cpp  playing_state.cpp  send_characters_state.cpp
src/master_client_state/: initial_state.cpp  initial_state.cpp.old  master_client_state.cpp
src/network_session_state/: initial_state.cpp  loading_state.cpp  manage_characters_state.cpp  playing_state.cpp  send_characters_state.cpp  state.cpp
